--- a/src/Resume_Website/static/styles/base_nav.css
+++ b/src/Resume_Website/static/styles/base_nav.css
@@ -3,9 +3,10 @@ body{
     background-color: #ffffff;
     color:#121212;
     margin: 0px;
-    height: 93vh;
+    height: 100vh;
     width: 100vw;
     overflow: hidden;
+    position: fixed;
 }
 
 #main-nav{
@@ -171,11 +172,12 @@ h1{
     width: 100%;
     position: absolute;
     z-index: -1;
-    overflow: hidden;
+    overflow-y: hidden;
 }
 
 .background{
     position: absolute;
+    overflow: hidden;
 }
 
 #black {
@@ -211,8 +213,14 @@ h1{
     box-shadow: 4px 4px 8px 8px rgba(0, 0, 0, 0.1), -4px -4px 8px 8px rgba(0, 0, 0, 0.1);
 }
 /* Responsiveness ---------------------------------------------------- */
-@media (max-width: 1200px) {
+@media (max-width: 1200px) and (min-width: 480px){
     body {
         font-size: .9rem;
     }
+}
+
+@media (max-width:480px) {
+    body {
+        font-size: .8rem;
+    } 
 }
